@@ -4,7 +4,7 @@
 # Project information
 
 project = "@SERD_TITLE@"
-copyright = "2022, David Robillard"
+copyright = "2022-2023, David Robillard"
 author = "David Robillard"
 release = "@SERD_VERSION@"
 version = "@SERD_VERSION@"
@@ -46,69 +46,68 @@ html_secnumber_suffix = " "
 html_short_title = "@SERD_TITLE@"
 html_static_path = ["@SERD_SRCDIR@/doc/_static"]
 
+html_theme_options = {
+    "description": desc,
+    "logo": "serd.svg",
+    "logo_name": True,
+    "logo_width": "8em",
+}
+
+if tags.has("singlehtml"):
+    html_sidebars = {"**": ["globaltoc.html"]}
+    html_theme_options.update(
+        {
+            "globaltoc_collapse": False,
+            "globaltoc_maxdepth": 3,
+            "nosidebar": False,
+            "page_width": "80em",
+        }
+    )
+else:
+    html_theme_options.update(
+        {
+            "globaltoc_collapse": True,
+            "globaltoc_maxdepth": 1,
+            "nosidebar": True,
+            "page_width": "60em",
+        }
+    )
+
 if have_lv2_theme:
     html_theme = "sphinx_lv2_theme"
 
-    if tags.has("singlehtml"):
-        html_sidebars = {
-            "**": [
-                "globaltoc.html",
-            ]
-        }
-
-        html_theme_options = {
-            "body_max_width": "48em",
-            "body_min_width": "48em",
-            "description": desc,
+    html_theme_options.update(
+        {
             "show_footer_version": True,
-            "show_logo_version": False,
-            "logo": "serd.svg",
-            "logo_name": True,
-            "logo_width": "8em",
-            "nosidebar": False,
-            "page_width": "80em",
-            "sidebar_width": "12em",
-            "globaltoc_maxdepth": 3,
-            "globaltoc_collapse": False,
+            "show_logo_version": True,
         }
+    )
+
+    if tags.has("singlehtml"):
+        html_theme_options.update(
+            {
+                "body_max_width": "64em",
+                "body_min_width": "64em",
+                "nosidebar": False,
+                "sidebar_width": "12em",
+            }
+        )
 
     else:
-        html_theme_options = {
-            "body_max_width": "60em",
-            "body_min_width": "40em",
-            "description": desc,
-            "show_footer_version": True,
-            "show_logo_version": False,
-            "logo": "serd.svg",
-            "logo_name": True,
-            "logo_width": "8em",
-            "nosidebar": True,
-            "page_width": "60em",
-            "sidebar_width": "14em",
-            "globaltoc_maxdepth": 1,
-            "globaltoc_collapse": True,
-        }
+        html_theme_options.update(
+            {
+                "body_max_width": "60em",
+                "body_min_width": "40em",
+            }
+        )
 
 else:
-
     html_theme = "alabaster"
 
     if tags.has("singlehtml"):
-        html_sidebars = {
-            "**": [
-                "globaltoc.html",
-            ]
-        }
-
         html_theme_options = {
-            "body_max_width": "40em",
+            "body_max_width": "58em",
             "body_min_width": "40em",
-            "description": desc,
-            "globaltoc_collapse": False,
-            "globaltoc_maxdepth": 3,
-            "logo": "serd.svg",
-            "nosidebar": False,
-            "page_width": "56em",
             "sidebar_width": "16em",
         }
 
@@ -116,9 +115,6 @@ else:
         html_theme_options = {
             "body_max_width": "60em",
             "body_min_width": "40em",
-            "description": desc,
-            "logo": "serd.svg",
             "nosidebar": True,
-            "page_width": "60em",
             "show_relbars": True,
         }
