@@ -1,8 +1,18 @@
 ..
-   Copyright 2020-2021 David Robillard <d@drobilla.net>
+   Copyright 2020-2023 David Robillard <d@drobilla.net>
    SPDX-License-Identifier: ISC
 
+####
+Serd
+####
+
 Serd is a lightweight C library for reading and writing RDF in Turtle_, NTriples_, NQuads_, and TriG_.
+
+.. toctree::
+   :numbered:
+
+   overview
+   api/serd
 
 .. _Turtle: http://www.w3.org/TR/turtle/
 .. _NTriples: http://www.w3.org/TR/n-triples/
